@@ -4299,10 +4299,19 @@ gfc_conv_resolve_dependencies (gfc_loopinfo * loop, gfc_ss * dest,
 
   for (ss = rss; ss != gfc_ss_terminator; ss = ss->next)
     {
-      if (ss->info->type != GFC_SS_SECTION)
-	continue;
 
       ss_expr = ss->info->expr;
+
+      if (ss->info->type != GFC_SS_SECTION)
+	{
+	  /* Check for cases like   c(:)(1:2) = c(2)(2:3)  */
+	  if (!nDepend && dest_expr->rank > 0
+	      && dest_expr->ts.type == BT_CHARACTER
+	      && ss_expr->expr_type == EXPR_VARIABLE)
+	    
+	    nDepend = gfc_check_dependency (dest_expr, ss_expr, false);
+	  continue;
+	}
 
       if (dest_expr->symtree->n.sym != ss_expr->symtree->n.sym)
 	{
